XW-3299: fixing margin issue on safari for button-group

--- a/style-guide/styles/wds-components/_button-groups.scss
+++ b/style-guide/styles/wds-components/_button-groups.scss
@@ -6,6 +6,7 @@
 	.wds-button {
 		//To achieve oneness of buttons, we overlap their border
 		height: auto;
+		margin-left: auto;
 		margin-right: -1px;
 
 		//on hover we want to show whole border of a button
